--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer {
+    :root{
+        --chart-shadow: 0 1px 2px 0 rgba(88,102,126,.12), 0 4px 24px 0 rgba(88,102,126,.08);
+    }
+}
